--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.5",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.32",
     "@types/nodemailer": "^6.4.4",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
@@ -38,10 +40,12 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "ioredis": "^4.28.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
+    "redis": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41",
     "typeorm-pagination": "^2.0.3"
