--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.1046.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.0",
     "class-transformer": "^0.5.1",
