--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/ioredis": "^4.28.5",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.32",
     "@types/nodemailer": "^6.4.4",
@@ -43,6 +44,7 @@
     "handlebars": "^4.7.7",
     "ioredis": "^4.28.2",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
