config: deploy repo github

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,23 @@
 APP_SECRET=
 APP_API_URL=https://localhost:3333
 APP_WEB_URL=https://localhost:3000
+
+APP_SECRET=
+APP_API_URL=https://localhost:3333
+APP_WEB_URL=https://localhost:3000
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
+
+# Mail config
+
+# Amazon SES Credentials: ethereal or ses
+MAIL_DRIVER=ses
+
+# Storage config: disk or s3
+STORAGE_DRIVER=s3
+
+# AWS Crendentials
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
